k8s/tito-old/tito-fe-2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: titofe-2-service
  labels:
    app: tito
    stage: prod
spec:
  ports:
  - name: http
    port: 80               # port expose par docker  (pas le port dans le container)
  selector:                     # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    type: tito-fe-2
  type: LoadBalancer
