k8s/tito-old/tito-fe-nsecpolicy-allow-fe.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-tito
spec:
  podSelector: 
    matchLabels:
      tiers: tito-fe
  ingress: 
  - {}
